solved some spacing and styling issues

--- a/client/main.css
+++ b/client/main.css
@@ -1,9 +1,18 @@
+* {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  
+}
+
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   overflow-y: scroll;
   overflow-x: hidden;
+  height: 100vh;
+  width: 100vw;
+  
 }
 
 ::-webkit-scrollbar {
